# ts3plugin-HotkeyMessage

./: CMakeLists.txt  LICENSE  README.md
release/: create.bat  package.ini
release/releases/: HotkeyMessage.ts3_plugin
src/: config.cpp  config.h  configui.ui  plugin.cpp  plugin.h  receiverlist.cpp  receiverlist.h  receiverlist.ui
